vitrail-pg-macros/tests/ui/fail/duplicate_model.rs
use vitrail_pg_macros::schema;

schema! {
    model user {
        id Int @id
    }

    model user {
        id Int @id
    }
}

fn main() {}
